[gd_scene load_steps=23 format=2]

[ext_resource path="res://assets/Enemies/mob_lv0.png" type="Texture" id=1]
[ext_resource path="res://Script/Enemies/Enemy_0.gd" type="Script" id=2]
[ext_resource path="res://white_color.shader" type="Shader" id=3]
[ext_resource path="res://assets/Shadows/little-shadow.png" type="Texture" id=4]
[ext_resource path="res://Scene/UI/Stats.tscn" type="PackedScene" id=5]
[ext_resource path="res://Scene/UI/HurtBox.tscn" type="PackedScene" id=6]
[ext_resource path="res://Scene/UI/HitBox.tscn" type="PackedScene" id=7]
[ext_resource path="res://Scene/Enemies/SoftCollision.tscn" type="PackedScene" id=8]

[sub_resource type="ShaderMaterial" id=1]
resource_local_to_scene = true
render_priority = 1
shader = ExtResource( 3 )
shader_param/active = false

[sub_resource type="CircleShape2D" id=12]

[sub_resource type="Animation" id=11]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("HitBox/CollisionShape2D:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 0.0194583, -33.9635 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("HitBox/CollisionShape2D:scale")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 1.1, 1.1 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("HurtBox/CollisionShape2D:position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( -0.0589284, -33.0264 ) ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("HurtBox/CollisionShape2D:disabled")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ false ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("HitBox/CollisionShape2D:disabled")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ false ]
}
tracks/5/type = "bezier"
tracks/5/path = NodePath("HurtBox2/CollisionShape2D:position:x")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/keys = {
"points": PoolRealArray( 0, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0 )
}
tracks/6/type = "bezier"
tracks/6/path = NodePath("HurtBox2/CollisionShape2D:position:y")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/keys = {
"points": PoolRealArray( -33.1456, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0 )
}
tracks/7/type = "bezier"
tracks/7/path = NodePath("HurtBox2/CollisionShape2D:shape:radius")
tracks/7/interp = 1
tracks/7/loop_wrap = true
tracks/7/imported = false
tracks/7/enabled = true
tracks/7/keys = {
"points": PoolRealArray( 0, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0 )
}
tracks/8/type = "bezier"
tracks/8/path = NodePath("HurtBox2/CollisionShape2D:shape:height")
tracks/8/interp = 1
tracks/8/loop_wrap = true
tracks/8/imported = false
tracks/8/enabled = true
tracks/8/keys = {
"points": PoolRealArray( 0, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0 )
}

[sub_resource type="Animation" id=3]
resource_name = "hurt"
length = 0.2
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:material:shader_param/active")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 1,
"values": [ false, true, false ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("HurtBox/CollisionShape2D:disabled")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.1, 0.2 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 1,
"values": [ false, true, false ]
}

[sub_resource type="Animation" id=4]
length = 0.3
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("HitBox/CollisionShape2D:shape:radius")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.3 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ 15.8383, 15.8383 ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("HitBox/CollisionShape2D:shape:height")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 0.3 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ 5.64349, 5.64349 ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("HitBox/CollisionShape2D:position")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 0.177, -33 ), Vector2( -0.138028, -34.436 ), Vector2( -0.22996, -34.297 ), Vector2( 0.373634, -32.2474 ) ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("HurtBox/CollisionShape2D:shape:radius")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0, 0.3 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ 13.7194, 13.7194 ]
}
tracks/5/type = "value"
tracks/5/path = NodePath("HurtBox/CollisionShape2D:shape:height")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 7.73988 ]
}
tracks/6/type = "value"
tracks/6/path = NodePath("HurtBox/CollisionShape2D:position")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 0, -33 ), Vector2( -0.0589284, -33.0264 ), Vector2( 0.0924476, -29.5243 ), Vector2( 0.207169, -30.2639 ) ]
}
tracks/7/type = "value"
tracks/7/path = NodePath("Sprite:material:shader_param/active")
tracks/7/interp = 1
tracks/7/loop_wrap = true
tracks/7/imported = false
tracks/7/enabled = true
tracks/7/keys = {
"times": PoolRealArray( 0, 0.3 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ false, false ]
}
tracks/8/type = "value"
tracks/8/path = NodePath("Sprite:position")
tracks/8/interp = 1
tracks/8/loop_wrap = true
tracks/8/imported = false
tracks/8/enabled = true
tracks/8/keys = {
"times": PoolRealArray( 0, 0.3 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 0, -30 ), Vector2( 0, -30 ) ]
}
tracks/9/type = "value"
tracks/9/path = NodePath(".:scale")
tracks/9/interp = 1
tracks/9/loop_wrap = true
tracks/9/imported = false
tracks/9/enabled = true
tracks/9/keys = {
"times": PoolRealArray( 0, 0.1, 0.2 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 0.4, 0.4 ), Vector2( 0.5, 0.5 ), Vector2( 0.4, 0.4 ) ]
}
tracks/10/type = "value"
tracks/10/path = NodePath("HitBox/CollisionShape2D:scale")
tracks/10/interp = 1
tracks/10/loop_wrap = true
tracks/10/imported = false
tracks/10/enabled = true
tracks/10/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 1.2, 1 ), Vector2( 1.1, 1.1 ), Vector2( 1, 1.2 ), Vector2( 1.2, 1 ) ]
}
tracks/11/type = "bezier"
tracks/11/path = NodePath("HurtBox2/CollisionShape2D:position:x")
tracks/11/interp = 1
tracks/11/loop_wrap = true
tracks/11/imported = false
tracks/11/enabled = true
tracks/11/keys = {
"points": PoolRealArray( 0, -0.25, 0, 0.25, 0, 0, -0.25, 0, 0.25, 0, 0, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0, 0.1, 0.2 )
}
tracks/12/type = "bezier"
tracks/12/path = NodePath("HurtBox2/CollisionShape2D:position:y")
tracks/12/interp = 1
tracks/12/loop_wrap = true
tracks/12/imported = false
tracks/12/enabled = true
tracks/12/keys = {
"points": PoolRealArray( -33.1456, -0.25, 0, 0.25, 0, -33.1456, -0.25, 0, 0.25, 0, -30.5149, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0, 0.1, 0.2 )
}
tracks/13/type = "bezier"
tracks/13/path = NodePath("HurtBox2/CollisionShape2D:shape:radius")
tracks/13/interp = 1
tracks/13/loop_wrap = true
tracks/13/imported = false
tracks/13/enabled = true
tracks/13/keys = {
"points": PoolRealArray( 15.5452, -0.25, 0, 0.25, 0, 15.5452, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0, 0.1 )
}
tracks/14/type = "bezier"
tracks/14/path = NodePath("HurtBox2/CollisionShape2D:shape:height")
tracks/14/interp = 1
tracks/14/loop_wrap = true
tracks/14/imported = false
tracks/14/enabled = true
tracks/14/keys = {
"points": PoolRealArray( 4.61842, -0.25, 0, 0.25, 0, 4.61842, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0, 0.1 )
}

[sub_resource type="Animation" id=5]
resource_name = "stop"
length = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:material:shader_param/active")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ false ]
}

[sub_resource type="CircleShape2D" id=6]
radius = 283.79

[sub_resource type="CapsuleShape2D" id=7]
radius = 15.8383
height = 5.64349

[sub_resource type="CapsuleShape2D" id=8]
radius = 13.7194
height = 7.73988

[sub_resource type="CapsuleShape2D" id=13]
radius = 0.0
height = 0.0

[sub_resource type="CapsuleShape2D" id=9]
radius = 15.4485
height = 0.0

[sub_resource type="CircleShape2D" id=10]

[sub_resource type="Animation" id=14]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("HitBox/CollisionShape2D:disabled")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ false ]
}

[sub_resource type="Animation" id=15]
resource_name = "autohit"
length = 0.2
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("HitBox/CollisionShape2D:disabled")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 1,
"values": [ false, true, false ]
}

[node name="Enemy_0" type="KinematicBody2D"]
scale = Vector2( 0.4, 0.4 )
collision_layer = 16
collision_mask = 0
script = ExtResource( 2 )
__meta__ = {
"_edit_group_": true,
"_edit_lock_": true
}
hurtBox = NodePath("HurtBox")
hitbox = NodePath("HitBox")
stats = NodePath("Stats")
softCollision = NodePath("SoftCollision")
playerDetectionZone = NodePath("Area2D")

[node name="Sprite" type="Sprite" parent="."]
material = SubResource( 1 )
position = Vector2( 0, -30 )
texture = ExtResource( 1 )
hframes = 3

[node name="shadow" type="Sprite" parent="."]
texture = ExtResource( 4 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 0.441942, -30.494 )
scale = Vector2( 0.5, 0.5 )
shape = SubResource( 12 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
autoplay = "idle"
anims/RESET = SubResource( 11 )
anims/hurt = SubResource( 3 )
anims/idle = SubResource( 4 )
anims/stop = SubResource( 5 )

[node name="Area2D" type="Area2D" parent="."]
visible = false
collision_layer = 0
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
position = Vector2( 0, -30 )
shape = SubResource( 6 )

[node name="HitBox" parent="." instance=ExtResource( 7 )]
visible = false
collision_mask = 4

[node name="CollisionShape2D" parent="HitBox" index="0"]
position = Vector2( 0.0194583, -33.9635 )
scale = Vector2( 1.1, 1.1 )
shape = SubResource( 7 )

[node name="HurtBox" parent="." instance=ExtResource( 6 )]
collision_layer = 8

[node name="CollisionShape2D" parent="HurtBox" index="0"]
position = Vector2( -0.0589284, -33.0264 )
shape = SubResource( 8 )

[node name="HurtBox2" parent="." instance=ExtResource( 6 )]
collision_layer = 33280

[node name="CollisionShape2D" parent="HurtBox2" index="0"]
position = Vector2( 0, -33.1456 )
shape = SubResource( 13 )

[node name="Stats" parent="." instance=ExtResource( 5 )]
max_health = 6

[node name="SoftCollision" parent="." instance=ExtResource( 8 )]
visible = false

[node name="CollisionShape2D" parent="SoftCollision" index="0"]
shape = SubResource( 9 )

[node name="Area2D2" type="Area2D" parent="."]
visible = false
collision_layer = 0
collision_mask = 2048

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D2"]
position = Vector2( 0, -30.6759 )
shape = SubResource( 10 )

[node name="HitAnimate" type="AnimationPlayer" parent="."]
autoplay = "autohit"
playback_speed = 0.7
anims/RESET = SubResource( 14 )
anims/autohit = SubResource( 15 )

[connection signal="body_entered" from="Area2D" to="." method="_on_Area2D_body_entered"]
[connection signal="body_exited" from="Area2D" to="." method="_on_Area2D_body_exited"]
[connection signal="area_entered" from="HurtBox" to="." method="_on_HurtBox_area_entered"]
[connection signal="invincible_ended" from="HurtBox" to="." method="_on_HurtBox_invincible_ended"]
[connection signal="invincible_started" from="HurtBox" to="." method="_on_HurtBox_invincible_started"]
[connection signal="area_entered" from="HurtBox2" to="." method="_on_HurtBox2_area_entered"]
[connection signal="no_health" from="Stats" to="." method="_on_Stats_no_health"]
[connection signal="body_entered" from="Area2D2" to="." method="_on_Area2D2_body_entered"]

[editable path="HitBox"]
[editable path="HurtBox"]
[editable path="HurtBox2"]
[editable path="SoftCollision"]
